Fixed login modal alignment and added user service

--- a/src/app/login-modal/login-modal.component.scss
+++ b/src/app/login-modal/login-modal.component.scss
@@ -5,4 +5,5 @@
 .main-div {
     width: 25vw;
     height: 60vh;
+    text-align: center;
 }
